@@ -1,53 +1,36 @@
 package controller;
-import model.Node;
-import model.Pathfinder;
-import model.entity.Enemy;
+import model.entity.npcs.MobManager;
+import model.entity.npcs.pathfinding.Node;
+import model.entity.npcs.pathfinding.Pathfinder;
+import model.entity.npcs.Enemy;
 import model.entity.Player;
 import model.position.WorldPosition;
 import model.world.World;
-import view.EnemyView;
-import view.PlayerView;
-import view.ScreenSettings;
+import view.game.elements.EnemyView;
 
-import javax.swing.*;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Random;
 
-import static view.ScreenSettings.tileSize;
+import static view.settings.ScreenSettings.tileSize;
 
+@SuppressWarnings("FieldCanBeLocal")
 public class EnemyController {
     //private final Enemy enemy;
     private final Enemy[] enemies;
     private final EnemyView enemyView;
-
-    private final int delay = 1000 / 60;
-    private final double speed = 0.5;
-
-    //private int pathStage; // 0 = right, 1 = down, 2 = left, 3 = up
-    //private int stepsRemaining = 100;
-
-    private double dx = 0, dy = 0;
     private double angle = 0;
-    private List<Node> pathList;
 
     private final int innerSpawnRadius = tileSize * 20;
     private final int outerSpawnRadius = tileSize * 30;
-
     private final Random rand = new Random();
     private List<Node> chasePath = null;
-
-    private final int despawnRadius = tileSize * 40;
-    private final double mobsPerSecond = 0.1;
-    private final double spawnProbability = 0;
     private boolean spawned = false;
-    public Pathfinder pFinder =  new Pathfinder();
-    Player player = Player.getInstance();
-    World world = World.getInstance();
+    final Player player = Player.getInstance();
+    final World world = World.getInstance();
 
     EnemyController(EnemyView enemyView) {
         this.enemyView = enemyView;
-        this.enemies = enemyView.getEnemies();
+        this.enemies = MobManager.getInstance().getEnemies();
     }
 
     public void tick() {
@@ -89,18 +72,16 @@ public class EnemyController {
         }
 
         if (e.onPath) {
-
-
             // compute path toward the player's tile
-            int goalCol = (pp.getX().intValue()+player.solidArea.x)/tileSize;
-            int goalRow = (pp.getY().intValue()+player.solidArea.y)/tileSize;
+            int goalCol = (pp.getXInt()+player.solidArea.x)/tileSize;
+            int goalRow = (pp.getYInt()+player.solidArea.y)/tileSize;
 
             if (chasePath == null || chasePath.isEmpty()) {
                 chasePath = e.searchPath(goalCol, goalRow);
             }
             //pathList = e.searchPath(goalCol, goalRow); //if()then (moveuntil) //dx,dy lost
             if (chasePath != null && !chasePath.isEmpty()) {
-                Node next = chasePath.get(0);
+                Node next = chasePath.getFirst();
 
                 double entityCenterX = e.getWorldPos().getX()
                         + e.solidArea.x
@@ -129,16 +110,17 @@ public class EnemyController {
                     double snapY = next.row*tileSize + tileSize/2.0
                             - (e.solidArea.y + e.solidArea.height/2.0);
                     e.getWorldPos().set(snapX, snapY);
-                    chasePath.remove(0);
+                    chasePath.removeFirst();
                 } else {
                     e.dx = ndx;
                     e.dy = ndy;
+
                     e.moveUntil(ndx, ndy);
                     if (distt <= e.getSpeed()) {
                         double snapX = tileCenterX - (e.solidArea.x + e.solidArea.width * 0.5);
                         double snapY = tileCenterY - (e.solidArea.y + e.solidArea.height * 0.5);
                         e.getWorldPos().set(snapX, snapY);
-                            chasePath.remove(0);
+                            chasePath.removeFirst();
                         //}
                     }
 
@@ -147,105 +129,11 @@ public class EnemyController {
             }
 
 
-            //angle =  Math.atan2(dy, dx);
-            /*if (pathList != null && !pathList.isEmpty()) {
-                double entityCenterX = e.getWorldPos().getX() + e.solidArea.x + e.solidArea.width  / 2.0;
-                double entityCenterY = e.getWorldPos().getY() + e.solidArea.y + e.solidArea.height / 2.0;
 
-                double targetCenterX = pathList.get(0).col * tileSize + tileSize / 2.0;
-                double targetCenterY = pathList.get(0).row * tileSize + tileSize / 2.0;
-
-                double ux = targetCenterX - entityCenterX;
-                double uy = targetCenterY - entityCenterY;
-
-                double distance = Math.hypot(ux, uy);
-                if (distance > 0) {
-                    dx = ux / distance;
-                    dy = uy / distance;
-                    System.out.printf("pathfinding: %.4f, %.4f%n", dx, dy);
-
-                    e.dx = dx;
-                    e.dy = dy;
-
-                    e.moveUntil(dx, dy);
-                    //e.collisionChecker.checkTile(e, dx, dy);
-                    angle = Math.atan2(e.dy, e.dx);*/
-
-                    /*if (dist < e.getSpeed()) {
-                        // we’re close enough to that tile center → snap & pop it
-                        WorldPosition wp = e.getWorldPos();
-                        double exactX = targetCenterX - e.solidArea.x - e.solidArea.width/2.0;
-                        double exactY = targetCenterY - e.solidArea.y - e.solidArea.height/2.0;
-                        wp.set(exactX, exactY);         // force‐snap to grid
-                        pathList.remove(0);             // consume that node
-                    }*/
-
-                //}
-            //}
-
-
-            // if path exists, step to the next node
-            /*if (!e.pFinder.pathList.isEmpty()) {
-                int nextCol = e.pFinder.pathList.get(0).col;
-                int nextRow = e.pFinder.pathList.get(0).row;
-
-                double targetX = nextCol * tileSize + tileSize / 2.0;
-                double targetY = nextRow * tileSize + tileSize / 2.0;
-
-                double vx = targetX - ep.getX();
-                double vy = targetY - ep.getY();
-                double len = Math.hypot(vx, vy);
-
-                if (len > 0) {
-                    e.moveUntil(vx / len, vy / len);
-                    e.collisionChecker.checkPlayer(e, 0, 0);
-
-                    double angle = Math.atan2(vy, vx);
-                    int dir8 = (int) Math.round(angle / (Math.PI / 4)) + 4;
-                    dir8 = dir8 % 8;
-
-                    switch (dir8) {
-                        case 0: // Move right
-                            dx = 1;
-                            dy = 0;
-                            break;
-                        case 1: // Move down - upright
-                            dx = 1;
-                            dy = -1;
-                            break;
-                        case 2: // Move  up
-                            dx = 0;
-                            dy = -1;
-                            break;
-                        case 3: // Move up - upleft
-                            dx = -1;
-                            dy = -1;
-                            break;
-                        case 4: // Move left
-                            dx = -1;
-                            dy = 0;
-                            break;
-                        case 5: // Move down -downleft
-                            dx = -1;
-                            dy = 1;
-                            break;
-                        case 6: // Move down
-                            dx = 0;
-                            dy = 1;
-                            break;
-                        case 7: // Move up - downright
-                            dx = 1;
-                            dy = 1;
-                            break;
-                    }
-
-                    return Math.atan2(dy, dx);
-                }
-            }*/
 
         } else {
             if (--e.wanderSteps <= 0) {
-                e.wanderSteps = 50 + rand.nextInt(100);;
+                e.wanderSteps = 50 + rand.nextInt(100);
                 e.pathStage = rand.nextInt(8);
             }
             dx = 0;
@@ -288,33 +176,15 @@ public class EnemyController {
             e.dx = dx;
             e.dy = dy;
 
-
             double length = Math.sqrt(dx * dx + dy * dy);
             double normalizedDx = dx / length;
             double normalizedDy = dy / length;
             e.moveUntil(normalizedDx, normalizedDy);
-            e.collisionChecker.checkPlayer(e, 0, 0);
+            e.getCollisionChecker().checkPlayer(e, 0, 0);
             angle = Math.atan2(e.dy, e.dx);
         }
     }
 
-
-    /*void updateEnemy(Enemy enemy, int index) {
-        if (stepsRemaining <= 0) {
-            pathStage = new Random().nextInt(8);;//(pathStage + 1) % 4; // loop through 0 -> 1 -> 2 -> 3 -> 0
-
-            stepsRemaining = 300; // reset steps for new side ************************************************************
-        }
-        //switvh/case
-        double length = Math.sqrt(dx * dx + dy * dy);
-        double normalizedDx = (double) dx / length;
-        double normalizedDy = (double) dy / length;
-        enemy.moveUntil(speed * normalizedDx, speed * normalizedDy);
-
-        double angle = Math.atan2(dy, dx);
-        enemyView.update(index,true, angle); //*****************
-        stepsRemaining--;
-    }*/
 
     private WorldPosition getSpawnPoint() throws NoSpawnpointFoundException {
 
@@ -346,49 +216,3 @@ public class EnemyController {
         throw new NoSpawnpointFoundException();
     }
 }
-
-
-/*for (int i = 0; i < enemies.length; ++i) {
-            //updateEnemy(enemies[i], i);
-            if (enemies[i] == null) continue;+++++++++++++++++++++++++++++++++++++++++++++
-            if (enemies[i].onPath){
-                int goalCol = (playerPos.getX().intValue()+player.solidArea.x)/tileSize;
-                int goalRow = (playerPos.getY().intValue()+player.solidArea.y)/tileSize;
-
-                enemies[i].searchPath(goalCol, goalRow);
-            } else {
-                if (--stepsRemaining[i] <= 0) {
-                    pathStage[i] = rand.nextInt(8);
-                    stepsRemaining[i] = rand.nextInt(200) + 100;
-                }
-
-            double dx = 0, dy = 0;
-            switch (pathStage[i]) {
-                case 0 -> { dx =  1; dy =  0; }  // right
-                case 1 -> { dx =  0; dy =  1; }  // down
-                case 2 -> { dx = -1; dy =  0; }  // left
-                case 3 -> { dx =  0; dy = -1; }  // up
-                case 4 -> { dx =  0.5; dy =  0.5; }
-                case 5 -> { dx = -0.5; dy = -0.5; }
-                case 6 -> { dx = -0.5; dy =  0.5; }
-                case 7 -> { dx =  0.5; dy = -0.5; }
-            }
-
-                double length = Math.sqrt(dx * dx + dy * dy);
-                double normalizedDx = (double) dx / length;
-                double normalizedDy = (double) dy / length;
-
-                //************************************************************************************************+
-                enemies[i].moveUntil(speed * normalizedDx, speed * normalizedDy);
-
-                double angle = Math.atan2(dy, dx);
-                enemyView.update(i, true, angle);
-            }
-        }*/
-
-    //updateEnemy(enemies[0]);
-    //updateEnemy(enemies[1]);
-    //updateEnemy(enemies[2]);
-    // despawn mobs that are too far
-    // update all existing mobs
-
